Refactor: added static variable PropertiesManager.DEFAULT_CHARSET, set to ISO-8859-1; using this variable where appliable (in Java code and JSPs); using commons-lang.CharEncoding enum values instead of hardcoded strings